--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
                   BASE_BRANCH: master # The branch the action should deploy from.
                   BRANCH: gh-pages # The branch the action should deploy to.
                   FOLDER: __sapper__/export # The folder the action should deploy.
-                  BUILD_SCRIPT: npm install && npm run export # The build script the action should run prior to deploying.
+                  BUILD_SCRIPT: npm install && npm run export --basepath Ontstoppingsdienst-sobry-site # The build script the action should run prior to deploying.
